--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "flux": "^2.1.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "vinyl-source-stream": "~1.1.0",
     "webpack-dev-server": "~1.14.1"
   },
