--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {
     "flux": "^2.1.1",
+    "lodash": "^4.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "vinyl-source-stream": "~1.1.0",
