--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "webpack-dev-server": "~1.14.1"
   },
   "devDependencies": {
-    "webpack": "~1.12.13",
     "babel-core": "~6.4.5",
     "babel-loader": "~6.2.2",
-    "babel-preset-react": "~6.3.13",
     "babel-preset-es2015": "~6.3.13",
-    "sass-loader": "~3.1.2",
+    "babel-preset-react": "~6.3.13",
+    "classnames": "^2.2.3",
+    "css-loader": "~0.23.1",
     "node-sass": "~3.4.2",
+    "sass-loader": "~3.1.2",
     "style-loader": "~0.13.0",
-    "css-loader": "~0.23.1"
+    "webpack": "~1.12.13"
   },
   "scripts": {
     "build": "webpack",
